@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<test-data>
+  <test-code>
+    <description>Basic scenario</description>
+    <expected-problems>3</expected-problems>
+    <code><![CDATA[
+<xsl:stylesheet version="1.0"
+                xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+<xsl:variable select="descendant::book"/>
+<xsl:variable select="following::book"/>
+<xsl:variable select="preceeding::book"/>
+</xsl:stylesheet>
+     ]]></code>
+    <source-type>xsl</source-type>
+  </test-code>
+  <test-code>
+    <description>Valid use of concat()</description>
+    <expected-problems>0</expected-problems>
+    <code><![CDATA[
+<xsl:stylesheet version="1.0"
+                xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+<!-- a node called 'descendant', probably a bad idea but shouldn't be a problem -->
+  <xsl:variable name="var" select="//descendant"/>
+</xsl:stylesheet>
+     ]]></code>
+    <source-type>xsl</source-type>
+  </test-code>
+</test-data>
