@@ -38,4 +38,40 @@ The XPath concat() functions accepts as many arguments as required so you can ha
  ]]>
      </example>
      </rule>
+     <rule name="AvoidAxisNavigation"
+           language="xsl"
+           since="5.0"
+           message="Axis navigation has the largest impact when writing an XPath query."
+           class="net.sourceforge.pmd.lang.rule.XPathRule"
+           externalInfoUrl="http://pmd.sourceforge.net/rules/xml/basic.html#AvoidAxisNavigation">
+     <description>
+Avoid using the 'following' or 'preceeding' axes whenever possible, as these can cut through 100% of the document in the worst case.  Also, try to avoid using 'descendant' or 'descendant-self' axes, as if you're at the top of the Document, it necessarily means cutting through 100% of the document. 
+     </description>
+     <priority>3</priority>
+     <properties>
+         <property name="xpath">
+             <value>
+ <![CDATA[
+//node()[
+  contains(@select,'preceeding::')
+  or
+  contains(@select,'following::')
+  or
+  contains(@select,'descendant::')
+  or 
+  contains(@select,'descendant-self::')
+]
+]]>
+<!-- the use of node() allow to target any node with an select attribute
+     but also workaround the ambiguity of having the xsl namespace in the
+     node name.-->
+             </value>
+         </property>
+     </properties>
+     <example>
+ <![CDATA[
+ <xsl:variable name="var" select="//item/descendant::child"/>
+ ]]>
+     </example>
+   </rule>
 </ruleset>
